<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent" android:background="@color/splash"
		android:layout_height="match_parent"
		tools:context=".MainActivity">
	<Button
			android:text="@string/B9"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B9"
			android:layout_marginTop="13dp"
			app:layout_constraintTop_toBottomOf="@+id/B5" app:layout_constraintStart_toEndOf="@+id/B7"
			app:layout_constraintEnd_toStartOf="@+id/B12" android:layout_marginEnd="14dp"
	/>
	<Button
			android:text="@string/A"
			android:layout_width="wrap_content" android:state_selected="false"
			android:layout_height="wrap_content" android:id="@+id/A"
			app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@+id/B1" app:layout_constraintEnd_toStartOf="@+id/B1"
			android:layout_marginEnd="17dp"/>
	<Button
			android:text="@string/K"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/K"
			app:layout_constraintStart_toStartOf="@+id/D" android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/D"/>
	<Button
			android:text="@string/D"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/D"
			android:layout_marginTop="10dp"
			app:layout_constraintTop_toBottomOf="@+id/B9" app:layout_constraintStart_toEndOf="@+id/C"
			app:layout_constraintEnd_toStartOf="@+id/E" android:layout_marginEnd="14dp"
	/>
	<Button
			android:text="@string/E"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/E"
			app:layout_constraintBaseline_toBaselineOf="@+id/D" app:layout_constraintStart_toEndOf="@+id/D"
			android:layout_marginEnd="3dp" app:layout_constraintEnd_toEndOf="parent"/>
	<Button
			android:text="@string/C"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/C"
			app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginTop="10dp"
			app:layout_constraintTop_toBottomOf="@+id/B7" app:layout_constraintEnd_toStartOf="@+id/D"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
	/>
	<Button
			android:text="@string/B1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B1"
			app:layout_constraintStart_toEndOf="@+id/A" app:layout_constraintEnd_toStartOf="@+id/B2"
			android:layout_marginBottom="73dp" app:layout_constraintBottom_toTopOf="@+id/B7"
			android:layout_marginEnd="14dp"/>
	<Button
			android:text="@string/B2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B2"
			app:layout_constraintBaseline_toBaselineOf="@+id/B1"
			app:layout_constraintStart_toEndOf="@+id/B1" android:layout_marginEnd="4dp"
			app:layout_constraintEnd_toEndOf="parent"/>
	<Button
			android:text="@string/B3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B3"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/B5"
			app:layout_constraintEnd_toStartOf="@+id/B5" android:layout_marginEnd="17dp"
	/>
	<Button
			android:text="@string/B5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B5"
			android:layout_marginTop="12dp"
			app:layout_constraintTop_toBottomOf="@+id/B1" app:layout_constraintStart_toEndOf="@+id/B3"
			app:layout_constraintEnd_toStartOf="@+id/B6" android:layout_marginEnd="14dp"
	/>
	<Button
			android:text="@string/B6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B6"
			app:layout_constraintBaseline_toBaselineOf="@+id/B5"
			app:layout_constraintStart_toEndOf="@+id/B5" android:layout_marginEnd="4dp"
			app:layout_constraintEnd_toEndOf="parent"/>
	<Button
			android:text="@string/B7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B7"
			app:layout_constraintHorizontal_chainStyle="packed"
			android:layout_marginTop="200dp" app:layout_constraintEnd_toStartOf="@+id/B9"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginEnd="16dp"/>
	<Button
			android:text="@string/B12"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/B12"
			app:layout_constraintBaseline_toBaselineOf="@+id/B9"
			app:layout_constraintStart_toEndOf="@+id/B9" android:layout_marginEnd="3dp"
			app:layout_constraintEnd_toEndOf="parent"/>
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" app:srcCompat="@drawable/blank" android:id="@+id/show"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
			app:layout_constraintTop_toBottomOf="@+id/K" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintVertical_bias="0.0"/>
	<TextView
			android:layout_width="148dp"
			android:layout_height="45dp" android:id="@+id/answer"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
			app:layout_constraintTop_toBottomOf="@+id/show" app:layout_constraintVertical_bias="0.064"
			app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="2dp"
			app:layout_constraintBottom_toBottomOf="parent"/>
	<Button
			android:text="@string/Submit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/Sub"
			app:layout_constraintTop_toBottomOf="@+id/E"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="40dp" app:layout_constraintVertical_bias="0.429"/>
	<Button
			android:text="@string/Clear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/clr"
			app:layout_constraintTop_toBottomOf="@+id/E" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="44dp"
			app:layout_constraintVertical_bias="0.429"/>
	<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_info_details"
			android:id="@+id/ins" android:background="@color/splash"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp" android:layout_marginEnd="23dp"
			app:layout_constraintEnd_toEndOf="parent"/>
	<ImageView
			android:layout_width="83dp"
			android:layout_height="78dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
			app:layout_constraintEnd_toStartOf="@+id/textView9" android:layout_marginBottom="389dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="57dp" android:layout_marginEnd="37dp"
			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
	<TextView
			android:text="@string/V"
			android:layout_width="wrap_content" android:textStyle="bold"
			android:layout_height="wrap_content" android:id="@+id/textView9"
			android:layout_marginTop="28dp" android:textSize="25sp"
			app:layout_constraintStart_toEndOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="171dp"
	/>

</androidx.constraintlayout.widget.ConstraintLayout>